--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,31 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:padding="25dp">
 
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/login_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/login_image" />
+
+    <ImageView
+        android:id="@+id/login_image"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/checkBox"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/text_view_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="name"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/login_image"
+        app:layout_constraintTop_toTopOf="@+id/login_image" />
 
     <TextView
         android:id="@+id/text_view_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="description"
         android:textSize="18sp"
-        android:layout_marginLeft="25dp"/>
+        app:layout_constraintBottom_toBottomOf="@+id/login_image"
+        app:layout_constraintStart_toEndOf="@+id/login_image" />
 
-    <TextView
-        android:id="@+id/text_view_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="location"
-        android:textSize="18sp"
-        android:layout_marginLeft="25dp"/>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
