--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,11 +17,11 @@
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/login_image"
+        app:layout_constraintStart_toEndOf="@+id/text_view_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/login_image"
+        android:id="@+id/text_view_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="16dp"
