--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,12 +11,12 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/login_image"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/login_image" />
+        app:layout_constraintTop_toTopOf="@+id/text_view_image" />
 
     <ImageView
-        android:id="@+id/login_image"
+        android:id="@+id/text_view_image"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_alignParentStart="true"
@@ -31,8 +31,8 @@
         android:layout_marginStart="16dp"
         android:text="name"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/login_image"
-        app:layout_constraintTop_toTopOf="@+id/login_image" />
+        app:layout_constraintStart_toEndOf="@+id/text_view_image"
+        app:layout_constraintTop_toTopOf="@+id/text_view_image" />
 
     <TextView
         android:id="@+id/text_view_description"
@@ -41,7 +41,7 @@
         android:layout_marginStart="16dp"
         android:text="description"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/login_image"
-        app:layout_constraintStart_toEndOf="@+id/login_image" />
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_image"
+        app:layout_constraintStart_toEndOf="@+id/text_view_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
