--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -29,17 +29,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="name"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/text_view_image"
         app:layout_constraintTop_toTopOf="@+id/text_view_image" />
 
     <TextView
-        android:id="@+id/text_view_description"
+        android:id="@+id/text_view_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="description"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/text_view_image"
         app:layout_constraintStart_toEndOf="@+id/text_view_image" />
