--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="@+id/text_view_image" />
 
     <TextView
-        android:id="@+id/text_view_location"
+        android:id="@+id/text_view_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
