--- a/app/src/main/res/layout/activity_routes.xml
+++ b/app/src/main/res/layout/activity_routes.xml
@@ -10,8 +10,18 @@
         android:id="@+id/historical_site_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/create_route"
+        android:padding="5dp" >
+
+    </ListView>
+
+    <Button
+        android:id="@+id/create_route"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_navigation"
-        android:padding="5dp" />
+        android:layout_marginBottom="0dp"
+        android:text="@string/create_historical_route" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
