--- a/app/src/main/res/layout/activity_route_map.xml
+++ b/app/src/main/res/layout/activity_route_map.xml
@@ -7,7 +7,7 @@
     tools:context=".Map">
 
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/route_map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
