--- a/app/src/main/res/layout/activity_site_page.xml
+++ b/app/src/main/res/layout/activity_site_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,20 +10,20 @@
         android:layout_height="150dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:contentDescription="@string/site_image_des"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/site_image_des" />
+        app:layout_constraintTop_toBottomOf="@+id/site_page_name" />
 
     <TextView
         android:id="@+id/site_page_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginStart="2dp"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/site_page_image"
-        app:layout_constraintTop_toTopOf="@+id/site_page_image" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/site_page_type"
@@ -32,10 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:textSize="15dp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/site_page_image"
-        app:layout_constraintTop_toBottomOf="@+id/site_page_name" />
+        app:layout_constraintTop_toTopOf="@+id/site_page_image" />
 
     <TextView
         android:id="@+id/site_page_location"
@@ -43,8 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textSize="15dp"
+        android:layout_marginTop="16dp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/site_page_image"
         app:layout_constraintTop_toBottomOf="@+id/site_page_type" />
 
@@ -56,6 +54,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/site_page_image" />
