--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -39,7 +39,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="@string/confirm_login"
+        android:hint="@string/confirm_email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/register_Password"
         app:layout_constraintEnd_toEndOf="parent"
