--- a/app/src/main/res/layout/activity_site_page.xml
+++ b/app/src/main/res/layout/activity_site_page.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/site_page_image"
         app:layout_constraintTop_toTopOf="@+id/site_page_image" />
