--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,21 +6,12 @@
     android:orientation="horizontal"
     android:padding="25dp">
 
-    <CheckBox
-        android:id="@+id/list_item_checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/list_item_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/list_item_image" />
-
     <ImageView
         android:id="@+id/list_item_image"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/list_item_checkBox"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -32,26 +23,23 @@
         app:layout_constraintStart_toEndOf="@+id/list_item_image"
         app:layout_constraintTop_toTopOf="@+id/list_item_image" />
 
-    <TextView
-        android:id="@+id/list_item_type"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/add_to_route"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textSize="18sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/add_to_route"
         app:layout_constraintBottom_toBottomOf="@+id/list_item_image"
+        app:layout_constraintEnd_toStartOf="@+id/selected_route_site"
         app:layout_constraintStart_toEndOf="@+id/list_item_image" />
-
 
     <Button
         android:id="@+id/selected_route_site"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/list_item_image"
-        android:layout_marginTop="8dp"
-        android:background="@color/color_primary_background"
         android:text="@string/view_site"
-        app:iconTint="@color/color_primary_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_item_name" />
+        app:layout_constraintBottom_toBottomOf="@+id/add_to_route"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
