develop, cleaned code and added comments

--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- A Scroll bar allows for a responsive scaling to phone and a single text size -->
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -28,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
-
+        <!-- Text view is populated through firebase, meaning changes can be more easily made -->
         <TextView
             android:id="@+id/about_page_description"
             android:layout_width="match_parent"
@@ -39,17 +40,16 @@
             tools:layout_editor_absoluteY="683dp" />
     </ScrollView>
 
+    <!-- Bottom Navigation bar, allowing users to move between activities -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/color_primary_background"
+        app:itemBackground="@color/color_secondary_background"
         app:itemIconTint="@color/color_primary_text"
         app:itemTextColor="@color/color_primary_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu_navigation" >
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+        app:menu="@menu/menu_navigation"></com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
