--- a/app/src/main/res/layout/activity_routes.xml
+++ b/app/src/main/res/layout/activity_routes.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Routes">
 
+    <!-- This list view is populated using the Firebase Realtime Database -->
     <ListView
         android:id="@+id/historical_site_list_view"
         android:layout_width="0dp"
@@ -16,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Linear Layout allows for a row of responsive buttons -->
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
@@ -44,17 +46,15 @@
             android:text="@string/filter_by_favourites" />
     </LinearLayout>
 
+    <!-- Bottom Navigation bar, allowing users to move between activities -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/color_primary_background"
+        app:itemBackground="@color/color_secondary_background"
         app:itemIconTint="@color/color_primary_text"
         app:itemTextColor="@color/color_primary_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_navigation" />
-
+        app:menu="@menu/menu_navigation"></com.google.android.material.bottomnavigation.BottomNavigationView>
 </androidx.constraintlayout.widget.ConstraintLayout>
