--- a/app/src/main/res/layout/activity_work_in_progress_page.xml
+++ b/app/src/main/res/layout/activity_work_in_progress_page.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".WorkInProgressPage">
 
+    <!-- This page provides clarity that there are future developments for the prototype -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
