--- a/app/src/main/res/layout/activity_create_new_site.xml
+++ b/app/src/main/res/layout/activity_create_new_site.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateNewSite">
-
+    <!-- Creating new Sites can be easily made using this page -->
     <EditText
         android:id="@+id/historical_site_name"
         android:layout_width="match_parent"
@@ -63,11 +63,11 @@
 
     <Spinner
         android:id="@+id/historical_site_type"
-        android:text="@string/select_historical_type"
         android:layout_width="200dp"
         android:layout_height="75dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
+        android:text="@string/select_historical_type"
         app:layout_constraintBottom_toTopOf="@+id/submit_historical_site"
         app:layout_constraintEnd_toEndOf="parent" />
 
