--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <!-- List of Buttons for settings, account and other -->
     <Button
         android:id="@+id/profile_about_button"
         android:layout_width="0dp"
@@ -28,50 +28,50 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
-        <Button
-            android:id="@+id/profile_notifications_button"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:text="@string/notifications_settings"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_about_button" />
+    <Button
+        android:id="@+id/profile_notifications_button"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="@string/notifications_settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_about_button" />
 
-        <Button
-            android:id="@+id/profile_account_button"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:text="@string/account_settings"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_notifications_button" />
+    <Button
+        android:id="@+id/profile_account_button"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="@string/account_settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_notifications_button" />
 
-        <Button
-            android:id="@+id/profile_social_button"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:text="@string/socials"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_account_button" />
+    <Button
+        android:id="@+id/profile_social_button"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="@string/socials"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_account_button" />
 
-        <Button
-            android:id="@+id/profile_help_button"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:text="@string/help_app_settings"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_social_button" />
+    <Button
+        android:id="@+id/profile_help_button"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="@string/help_app_settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_social_button" />
 
-        <Button
-            android:id="@+id/add_new_site"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:text="@string/add_new_site"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_help_button" />
+    <Button
+        android:id="@+id/add_new_site"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="@string/add_new_site"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_help_button" />
 
     <Button
         android:id="@+id/logout_btn"
@@ -83,16 +83,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Bottom Navigation bar, allowing users to move between activities -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/color_primary_background"
+        app:itemBackground="@color/color_secondary_background"
         app:itemIconTint="@color/color_primary_text"
         app:itemTextColor="@color/color_primary_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu_navigation" />
-
-
+        app:menu="@menu/menu_navigation"></com.google.android.material.bottomnavigation.BottomNavigationView>
 </androidx.constraintlayout.widget.ConstraintLayout>
